--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
     "sequelize": "^6.19.0"
